{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 172,
  "lineage": "e9d246bb-2e9e-0cac-2acf-d31cd0d37988",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ai_to_application_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d3b59aee57d0d1d1179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0d3b59aee57d0d1d1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-08b5a4ee703b33e46"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0d3b59aee57d0d1d1"
          },
          "dependencies": [
            "aws_vpc_peering_connection.application_ai",
            "module.vpc_ai.aws_route_table.private",
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_application.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04b0111a8f8be07e2179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-04b0111a8f8be07e2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-08b5a4ee703b33e46"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-04b0111a8f8be07e2"
          },
          "dependencies": [
            "aws_vpc_peering_connection.application_ai",
            "module.vpc_ai.aws_route_table.private",
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_application.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "ai_to_application_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e7d6e43325a2d726179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0e7d6e43325a2d726",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-08b5a4ee703b33e46"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0e7d6e43325a2d726"
          },
          "dependencies": [
            "aws_vpc_peering_connection.application_ai",
            "module.vpc_ai.aws_route_table.public",
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_application.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "application_to_ai_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0faad9e37af03dd263322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0faad9e37af03dd26",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-08b5a4ee703b33e46"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0faad9e37af03dd26"
          },
          "dependencies": [
            "aws_vpc_peering_connection.application_ai",
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_application.aws_route_table.private",
            "module.vpc_application.aws_vpc.this"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04df4c99eb9fc02cc3322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-04df4c99eb9fc02cc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-08b5a4ee703b33e46"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-04df4c99eb9fc02cc"
          },
          "dependencies": [
            "aws_vpc_peering_connection.application_ai",
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_application.aws_route_table.private",
            "module.vpc_application.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "application_to_ai_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-054f13d37a1b56e273322942084",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-054f13d37a1b56e27",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-08b5a4ee703b33e46"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "destination_cidr_block": "10.1.0.0/16",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-054f13d37a1b56e27"
          },
          "dependencies": [
            "aws_vpc_peering_connection.application_ai",
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_application.aws_route_table.public",
            "module.vpc_application.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "application_ai",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-08b5a4ee703b33e46",
            "peer_owner_id": "072937283954",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0342a4f2412df12cc",
            "region": "us-west-2",
            "requester": [
              {
                "allow_remote_vpc_dns_resolution": false
              }
            ],
            "tags": {
              "Name": "vpc-application-ai-peering"
            },
            "tags_all": {
              "Name": "vpc-application-ai-peering"
            },
            "vpc_id": "vpc-0c55b7c2f31426cf9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_application.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ai",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05888d99161119dd0",
            "arn": "arn:aws:ec2:us-west-2:072937283954:elastic-ip/eipalloc-05888d99161119dd0",
            "domain": "vpc",
            "id": "eipalloc-05888d99161119dd0",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-188-232-234.us-west-2.compute.amazonaws.com",
            "public_ip": "54.188.232.234",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-ai-nat-eip-1"
            },
            "tags_all": {
              "Name": "vpc-ai-nat-eip-1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "eipalloc-05888d99161119dd0",
            "region": "us-west-2"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5ed2796ccbfae9c",
            "arn": "arn:aws:ec2:us-west-2:072937283954:elastic-ip/eipalloc-0a5ed2796ccbfae9c",
            "domain": "vpc",
            "id": "eipalloc-0a5ed2796ccbfae9c",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-161-80-103.us-west-2.compute.amazonaws.com",
            "public_ip": "35.161.80.103",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-ai-nat-eip-2"
            },
            "tags_all": {
              "Name": "vpc-ai-nat-eip-2"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "eipalloc-0a5ed2796ccbfae9c",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc_ai",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:internet-gateway/igw-08ca1262d0a627b4d",
            "id": "igw-08ca1262d0a627b4d",
            "owner_id": "072937283954",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-ai-igw"
            },
            "tags_all": {
              "Name": "vpc-ai-igw"
            },
            "vpc_id": "vpc-0342a4f2412df12cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "igw-08ca1262d0a627b4d",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_ai.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ai",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05888d99161119dd0",
            "association_id": "eipassoc-0a79453fa7774f101",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d29e2e97ff2f47a1",
            "network_interface_id": "eni-0534a796913ad240b",
            "private_ip": "10.1.1.226",
            "public_ip": "54.188.232.234",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0fa918b520c31ba8e",
            "tags": {
              "Name": "vpc-ai-nat-1"
            },
            "tags_all": {
              "Name": "vpc-ai-nat-1"
            },
            "vpc_id": "vpc-0342a4f2412df12cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "nat-0d29e2e97ff2f47a1",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_ai.aws_eip.nat",
            "module.vpc_ai.aws_internet_gateway.this",
            "module.vpc_ai.aws_subnet.public",
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_ai.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a5ed2796ccbfae9c",
            "association_id": "eipassoc-0d922efcba16c6447",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0fc31684ecf2d6de5",
            "network_interface_id": "eni-0599c675fab2c988c",
            "private_ip": "10.1.2.70",
            "public_ip": "35.161.80.103",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01cf460ece16d1cc7",
            "tags": {
              "Name": "vpc-ai-nat-2"
            },
            "tags_all": {
              "Name": "vpc-ai-nat-2"
            },
            "vpc_id": "vpc-0342a4f2412df12cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "nat-0fc31684ecf2d6de5",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_ai.aws_eip.nat",
            "module.vpc_ai.aws_internet_gateway.this",
            "module.vpc_ai.aws_subnet.public",
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_ai.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ai",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d3b59aee57d0d1d11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d29e2e97ff2f47a1",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0d3b59aee57d0d1d1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0d3b59aee57d0d1d1"
          },
          "dependencies": [
            "module.vpc_ai.aws_eip.nat",
            "module.vpc_ai.aws_internet_gateway.this",
            "module.vpc_ai.aws_nat_gateway.this",
            "module.vpc_ai.aws_route_table.private",
            "module.vpc_ai.aws_subnet.public",
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_ai.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04b0111a8f8be07e21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fc31684ecf2d6de5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-04b0111a8f8be07e2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-04b0111a8f8be07e2"
          },
          "dependencies": [
            "module.vpc_ai.aws_eip.nat",
            "module.vpc_ai.aws_internet_gateway.this",
            "module.vpc_ai.aws_nat_gateway.this",
            "module.vpc_ai.aws_route_table.private",
            "module.vpc_ai.aws_subnet.public",
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_ai.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ai",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08ca1262d0a627b4d",
            "id": "r-rtb-0e7d6e43325a2d7261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0e7d6e43325a2d726",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0e7d6e43325a2d726"
          },
          "dependencies": [
            "module.vpc_ai.aws_internet_gateway.this",
            "module.vpc_ai.aws_route_table.public",
            "module.vpc_ai.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ai",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:route-table/rtb-0d3b59aee57d0d1d1",
            "id": "rtb-0d3b59aee57d0d1d1",
            "owner_id": "072937283954",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Name": "vpc-ai-private-rt-1"
            },
            "tags_all": {
              "Name": "vpc-ai-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0342a4f2412df12cc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "rtb-0d3b59aee57d0d1d1",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_ai.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:route-table/rtb-04b0111a8f8be07e2",
            "id": "rtb-04b0111a8f8be07e2",
            "owner_id": "072937283954",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Name": "vpc-ai-private-rt-2"
            },
            "tags_all": {
              "Name": "vpc-ai-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0342a4f2412df12cc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "rtb-04b0111a8f8be07e2",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_ai.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ai",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:route-table/rtb-0e7d6e43325a2d726",
            "id": "rtb-0e7d6e43325a2d726",
            "owner_id": "072937283954",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Name": "vpc-ai-public-rt"
            },
            "tags_all": {
              "Name": "vpc-ai-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0342a4f2412df12cc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "rtb-0e7d6e43325a2d726",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_ai.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ai",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-080b45890d4c0033d",
            "region": "us-west-2",
            "route_table_id": "rtb-0d3b59aee57d0d1d1",
            "subnet_id": "subnet-08d3b1367eeb60cc6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "rtbassoc-080b45890d4c0033d",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_ai.aws_route_table.private",
            "module.vpc_ai.aws_subnet.private",
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_ai.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0338f24c4acd20911",
            "region": "us-west-2",
            "route_table_id": "rtb-04b0111a8f8be07e2",
            "subnet_id": "subnet-04876851d8292a98e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "rtbassoc-0338f24c4acd20911",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_ai.aws_route_table.private",
            "module.vpc_ai.aws_subnet.private",
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_ai.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ai",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9c911a086485f8f",
            "region": "us-west-2",
            "route_table_id": "rtb-0e7d6e43325a2d726",
            "subnet_id": "subnet-0fa918b520c31ba8e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "rtbassoc-0f9c911a086485f8f",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_ai.aws_route_table.public",
            "module.vpc_ai.aws_subnet.public",
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_ai.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00905151e86359d88",
            "region": "us-west-2",
            "route_table_id": "rtb-0e7d6e43325a2d726",
            "subnet_id": "subnet-01cf460ece16d1cc7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "rtbassoc-00905151e86359d88",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_ai.aws_route_table.public",
            "module.vpc_ai.aws_subnet.public",
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_ai.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ai",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:subnet/subnet-08d3b1367eeb60cc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d3b1367eeb60cc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072937283954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-ai-private-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-ai-private-subnet-1"
            },
            "vpc_id": "vpc-0342a4f2412df12cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "subnet-08d3b1367eeb60cc6",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_ai.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:subnet/subnet-04876851d8292a98e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04876851d8292a98e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072937283954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-ai-private-subnet-2"
            },
            "tags_all": {
              "Name": "vpc-ai-private-subnet-2"
            },
            "vpc_id": "vpc-0342a4f2412df12cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "subnet-04876851d8292a98e",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_ai.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ai",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:subnet/subnet-0fa918b520c31ba8e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fa918b520c31ba8e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "072937283954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-ai-public-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-ai-public-subnet-1"
            },
            "vpc_id": "vpc-0342a4f2412df12cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "subnet-0fa918b520c31ba8e",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_ai.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:subnet/subnet-01cf460ece16d1cc7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cf460ece16d1cc7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "072937283954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-ai-public-subnet-2"
            },
            "tags_all": {
              "Name": "vpc-ai-public-subnet-2"
            },
            "vpc_id": "vpc-0342a4f2412df12cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "subnet-01cf460ece16d1cc7",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_ai.aws_vpc.this",
            "module.vpc_ai.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_ai",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:vpc/vpc-0342a4f2412df12cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-04d3de25c4ec07a40",
            "default_route_table_id": "rtb-072e8a4234819443e",
            "default_security_group_id": "sg-0e5dcab799f958fc2",
            "dhcp_options_id": "dopt-0c3b06222ad358bec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0342a4f2412df12cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-072e8a4234819443e",
            "owner_id": "072937283954",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-ai"
            },
            "tags_all": {
              "Name": "vpc-ai"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "vpc-0342a4f2412df12cc",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc_application",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-040d837997c4cc60d",
            "arn": "arn:aws:ec2:us-west-2:072937283954:elastic-ip/eipalloc-040d837997c4cc60d",
            "domain": "vpc",
            "id": "eipalloc-040d837997c4cc60d",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-215-104-182.us-west-2.compute.amazonaws.com",
            "public_ip": "34.215.104.182",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-application-nat-eip-1"
            },
            "tags_all": {
              "Name": "vpc-application-nat-eip-1"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "eipalloc-040d837997c4cc60d",
            "region": "us-west-2"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a8a9547b235babe",
            "arn": "arn:aws:ec2:us-west-2:072937283954:elastic-ip/eipalloc-07a8a9547b235babe",
            "domain": "vpc",
            "id": "eipalloc-07a8a9547b235babe",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-34-208-253-223.us-west-2.compute.amazonaws.com",
            "public_ip": "34.208.253.223",
            "public_ipv4_pool": "amazon",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-application-nat-eip-2"
            },
            "tags_all": {
              "Name": "vpc-application-nat-eip-2"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "eipalloc-07a8a9547b235babe",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "module": "module.vpc_application",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:internet-gateway/igw-049bcd455b83e55f2",
            "id": "igw-049bcd455b83e55f2",
            "owner_id": "072937283954",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-application-igw"
            },
            "tags_all": {
              "Name": "vpc-application-igw"
            },
            "vpc_id": "vpc-0c55b7c2f31426cf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "igw-049bcd455b83e55f2",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_application.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_application",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-040d837997c4cc60d",
            "association_id": "eipassoc-014caccaf5cab8e27",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0d044bbf8e49e5f8d",
            "network_interface_id": "eni-04407839036769650",
            "private_ip": "10.0.1.139",
            "public_ip": "34.215.104.182",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01aa3aff209897784",
            "tags": {
              "Name": "vpc-application-nat-1"
            },
            "tags_all": {
              "Name": "vpc-application-nat-1"
            },
            "vpc_id": "vpc-0c55b7c2f31426cf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "nat-0d044bbf8e49e5f8d",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_application.aws_eip.nat",
            "module.vpc_application.aws_internet_gateway.this",
            "module.vpc_application.aws_subnet.public",
            "module.vpc_application.aws_vpc.this",
            "module.vpc_application.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07a8a9547b235babe",
            "association_id": "eipassoc-07e005787cfd1af03",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-09150229e20d61eae",
            "network_interface_id": "eni-0e910ce54fc29745e",
            "private_ip": "10.0.2.173",
            "public_ip": "34.208.253.223",
            "region": "us-west-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07e557f9d229df205",
            "tags": {
              "Name": "vpc-application-nat-2"
            },
            "tags_all": {
              "Name": "vpc-application-nat-2"
            },
            "vpc_id": "vpc-0c55b7c2f31426cf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "nat-09150229e20d61eae",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_application.aws_eip.nat",
            "module.vpc_application.aws_internet_gateway.this",
            "module.vpc_application.aws_subnet.public",
            "module.vpc_application.aws_vpc.this",
            "module.vpc_application.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_application",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0faad9e37af03dd261080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d044bbf8e49e5f8d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-0faad9e37af03dd26",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-0faad9e37af03dd26"
          },
          "dependencies": [
            "module.vpc_application.aws_eip.nat",
            "module.vpc_application.aws_internet_gateway.this",
            "module.vpc_application.aws_nat_gateway.this",
            "module.vpc_application.aws_route_table.private",
            "module.vpc_application.aws_subnet.public",
            "module.vpc_application.aws_vpc.this",
            "module.vpc_application.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04df4c99eb9fc02cc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09150229e20d61eae",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-04df4c99eb9fc02cc",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-04df4c99eb9fc02cc"
          },
          "dependencies": [
            "module.vpc_application.aws_eip.nat",
            "module.vpc_application.aws_internet_gateway.this",
            "module.vpc_application.aws_nat_gateway.this",
            "module.vpc_application.aws_route_table.private",
            "module.vpc_application.aws_subnet.public",
            "module.vpc_application.aws_vpc.this",
            "module.vpc_application.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_application",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-049bcd455b83e55f2",
            "id": "r-rtb-054f13d37a1b56e271080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-west-2",
            "route_table_id": "rtb-054f13d37a1b56e27",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-west-2",
            "route_table_id": "rtb-054f13d37a1b56e27"
          },
          "dependencies": [
            "module.vpc_application.aws_internet_gateway.this",
            "module.vpc_application.aws_route_table.public",
            "module.vpc_application.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_application",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:route-table/rtb-0faad9e37af03dd26",
            "id": "rtb-0faad9e37af03dd26",
            "owner_id": "072937283954",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Name": "vpc-application-private-rt-1"
            },
            "tags_all": {
              "Name": "vpc-application-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c55b7c2f31426cf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "rtb-0faad9e37af03dd26",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_application.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:route-table/rtb-04df4c99eb9fc02cc",
            "id": "rtb-04df4c99eb9fc02cc",
            "owner_id": "072937283954",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Name": "vpc-application-private-rt-2"
            },
            "tags_all": {
              "Name": "vpc-application-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c55b7c2f31426cf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "rtb-04df4c99eb9fc02cc",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_application.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_application",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:route-table/rtb-054f13d37a1b56e27",
            "id": "rtb-054f13d37a1b56e27",
            "owner_id": "072937283954",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [],
            "tags": {
              "Name": "vpc-application-public-rt"
            },
            "tags_all": {
              "Name": "vpc-application-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c55b7c2f31426cf9"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "rtb-054f13d37a1b56e27",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_application.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_application",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1215ee4d74811ad",
            "region": "us-west-2",
            "route_table_id": "rtb-0faad9e37af03dd26",
            "subnet_id": "subnet-0ca9abe1ecae271e6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "rtbassoc-0d1215ee4d74811ad",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_application.aws_route_table.private",
            "module.vpc_application.aws_subnet.private",
            "module.vpc_application.aws_vpc.this",
            "module.vpc_application.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d41b920adddd23f",
            "region": "us-west-2",
            "route_table_id": "rtb-04df4c99eb9fc02cc",
            "subnet_id": "subnet-054926ab152e638f6"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "rtbassoc-04d41b920adddd23f",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_application.aws_route_table.private",
            "module.vpc_application.aws_subnet.private",
            "module.vpc_application.aws_vpc.this",
            "module.vpc_application.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_application",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0196af589f119187c",
            "region": "us-west-2",
            "route_table_id": "rtb-054f13d37a1b56e27",
            "subnet_id": "subnet-01aa3aff209897784"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "rtbassoc-0196af589f119187c",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_application.aws_route_table.public",
            "module.vpc_application.aws_subnet.public",
            "module.vpc_application.aws_vpc.this",
            "module.vpc_application.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8e5c2e54d271bbe",
            "region": "us-west-2",
            "route_table_id": "rtb-054f13d37a1b56e27",
            "subnet_id": "subnet-07e557f9d229df205"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "rtbassoc-0e8e5c2e54d271bbe",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_application.aws_route_table.public",
            "module.vpc_application.aws_subnet.public",
            "module.vpc_application.aws_vpc.this",
            "module.vpc_application.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_application",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:subnet/subnet-0ca9abe1ecae271e6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca9abe1ecae271e6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072937283954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-application-private-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-application-private-subnet-1"
            },
            "vpc_id": "vpc-0c55b7c2f31426cf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "subnet-0ca9abe1ecae271e6",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_application.aws_vpc.this",
            "module.vpc_application.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:subnet/subnet-054926ab152e638f6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-054926ab152e638f6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "072937283954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-application-private-subnet-2"
            },
            "tags_all": {
              "Name": "vpc-application-private-subnet-2"
            },
            "vpc_id": "vpc-0c55b7c2f31426cf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "subnet-054926ab152e638f6",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_application.aws_vpc.this",
            "module.vpc_application.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_application",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:subnet/subnet-01aa3aff209897784",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01aa3aff209897784",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "072937283954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-application-public-subnet-1"
            },
            "tags_all": {
              "Name": "vpc-application-public-subnet-1"
            },
            "vpc_id": "vpc-0c55b7c2f31426cf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "subnet-01aa3aff209897784",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_application.aws_vpc.this",
            "module.vpc_application.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:subnet/subnet-07e557f9d229df205",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07e557f9d229df205",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "072937283954",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-application-public-subnet-2"
            },
            "tags_all": {
              "Name": "vpc-application-public-subnet-2"
            },
            "vpc_id": "vpc-0c55b7c2f31426cf9"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "subnet-07e557f9d229df205",
            "region": "us-west-2"
          },
          "dependencies": [
            "module.vpc_application.aws_vpc.this",
            "module.vpc_application.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_application",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:072937283954:vpc/vpc-0c55b7c2f31426cf9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02fee82158c8c8925",
            "default_route_table_id": "rtb-08a12cbe2f78adbe1",
            "default_security_group_id": "sg-07d4e902c686f039f",
            "dhcp_options_id": "dopt-0c3b06222ad358bec",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c55b7c2f31426cf9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08a12cbe2f78adbe1",
            "owner_id": "072937283954",
            "region": "us-west-2",
            "tags": {
              "Name": "vpc-application"
            },
            "tags_all": {
              "Name": "vpc-application"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "072937283954",
            "id": "vpc-0c55b7c2f31426cf9",
            "region": "us-west-2"
          }
        }
      ]
    }
  ]
}